[gd_scene load_steps=33 format=3 uid="uid://ddm5h3pwoufnq"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_cc7cf"]
[ext_resource type="Texture2D" uid="uid://mu2wvmrdpctu" path="res://Assets/sprites/knight.png" id="2_mfa1t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bcoaf"]
atlas = ExtResource("2_mfa1t")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kly6j"]
atlas = ExtResource("2_mfa1t")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5whp"]
atlas = ExtResource("2_mfa1t")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8osao"]
atlas = ExtResource("2_mfa1t")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xptxp"]
atlas = ExtResource("2_mfa1t")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0h2tp"]
atlas = ExtResource("2_mfa1t")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vt776"]
atlas = ExtResource("2_mfa1t")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qr8j3"]
atlas = ExtResource("2_mfa1t")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7cfk"]
atlas = ExtResource("2_mfa1t")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0vxa"]
atlas = ExtResource("2_mfa1t")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ifux"]
atlas = ExtResource("2_mfa1t")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlara"]
atlas = ExtResource("2_mfa1t")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ohml"]
atlas = ExtResource("2_mfa1t")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t01q3"]
atlas = ExtResource("2_mfa1t")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_453ir"]
atlas = ExtResource("2_mfa1t")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvo3k"]
atlas = ExtResource("2_mfa1t")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r13sn"]
atlas = ExtResource("2_mfa1t")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n360k"]
atlas = ExtResource("2_mfa1t")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_umjqq"]
atlas = ExtResource("2_mfa1t")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u73m"]
atlas = ExtResource("2_mfa1t")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aa3mf"]
atlas = ExtResource("2_mfa1t")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ea0ro"]
atlas = ExtResource("2_mfa1t")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yalc1"]
atlas = ExtResource("2_mfa1t")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrb3f"]
atlas = ExtResource("2_mfa1t")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqgna"]
atlas = ExtResource("2_mfa1t")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcey8"]
atlas = ExtResource("2_mfa1t")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nb7t"]
atlas = ExtResource("2_mfa1t")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nm8y0"]
atlas = ExtResource("2_mfa1t")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cq7y2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcoaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kly6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5whp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8osao")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xptxp")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h2tp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vt776")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr8j3")
}],
"loop": true,
"name": &"roll_in",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7cfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0vxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ifux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlara")
}],
"loop": true,
"name": &"roll_loop",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ohml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t01q3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_453ir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvo3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r13sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n360k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umjqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u73m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aa3mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea0ro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yalc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrb3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqgna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcey8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nb7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nm8y0")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rrbne"]
radius = 5.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 14
script = ExtResource("1_cc7cf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 5
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_cq7y2")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.493955
offset = Vector2(8, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, -5)
shape = SubResource("CircleShape2D_rrbne")

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
